--- a/game/index.html
+++ b/game/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="assets/js/phaser.js"></script>
     <title>Your Virtual Pet</title>
     <style>
+      body {
+        background: black;
+      }
       canvas {
         width: 100%;
       }
@@ -13,7 +17,6 @@
   </head>
 
   <body>
-    <script src="assets/js/phaser.js"></script>
     <script src="assets/js/main2.js"></script>
   </body>
 </html>
